# hypr-quicklight

./: CMakeLists.txt  README.md
cmake/: waylandpp-extra-copy.hpp  waylandpp-extra.hpp
protocols/: ext-image-capture-source-v1.xml
src/: main.cpp  quiklight_hid.cpp  quiklight_hid.hpp  quiklight_layout.hpp
wayland/: capture.cpp  capture.hpp
